# Data-Analysis

./: CMakeLists.txt  README.md
data/: eur_usd_data.xml  plot_script.py
src/: data_parser.cpp  data_parser.h  ema_calculator.cpp  ema_calculator.h  logger.cpp  logger.h  main.cpp
